activete contact side

--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,5 @@ CLOUD_NAME=dtxiucgdz
 API_KEY=412383464213481
 API_SECRET=0ILfoRU7D5QetTx0ZCrftpSoZK4
 DATABASE_URL=postgresql://neondb_owner:npg_ZAaXrut90WRz@ep-late-dust-ag742zwb-pooler.c-2.eu-central-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
+EMAIL_USER=huseyinbudak904@gmail.com
+EMAIL_PASS=xqtu diyi vgdv pjxg
