--- a/backend/package.json
+++ b/backend/package.json
@@ -12,14 +12,15 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cloudinary": "^1.39.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.13.0",
+    "nodemailer": "^8.0.1",
     "pg": "^8.11.3",
-    "cloudinary": "^1.39.1",
     "streamifier": "^0.1.1"
   }
 }
